--- a/GetGoingClass/Base.lproj/Main.storyboard
+++ b/GetGoingClass/Base.lproj/Main.storyboard
@@ -1,24 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Woa-RC-gxL">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Search View Controller-->
+        <scene sceneID="RGW-x8-ujO">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="Woa-RC-gxL" customClass="SearchViewController" customModule="GetGoingClass" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zYa-jv-pfb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shutterstock" translatesAutoresizingMaskIntoConstraints="NO" id="TZg-S5-ynh">
+                                <rect key="frame" x="0.0" y="20" width="375" height="133.5"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="L5x-yb-qj0">
+                                <rect key="frame" x="20" y="163.5" width="335" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ic9-pM-O8s">
+                                        <rect key="frame" x="0.0" y="0.0" width="25" height="30"/>
+                                        <state key="normal" image="filtersDefault"/>
+                                    </button>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Start typing your request" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lib-wf-Mmo">
+                                        <rect key="frame" x="35" y="0.0" width="242" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lcl-40-uQl">
+                                        <rect key="frame" x="287" y="0.0" width="48" height="30"/>
+                                        <state key="normal" title="Search"/>
+                                        <connections>
+                                            <action selector="searchButtonAction:" destination="Woa-RC-gxL" eventType="touchUpInside" id="Lqh-nB-Grr"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="L5x-yb-qj0" secondAttribute="trailing" constant="20" id="1uy-Ai-ZAh"/>
+                            <constraint firstItem="TZg-S5-ynh" firstAttribute="leading" secondItem="Yud-cm-bYW" secondAttribute="leading" id="69m-71-OZs"/>
+                            <constraint firstItem="TZg-S5-ynh" firstAttribute="height" secondItem="zYa-jv-pfb" secondAttribute="height" multiplier="0.2" id="DIA-37-CQF"/>
+                            <constraint firstItem="TZg-S5-ynh" firstAttribute="top" secondItem="Yud-cm-bYW" secondAttribute="top" id="WG6-q6-b3P"/>
+                            <constraint firstItem="L5x-yb-qj0" firstAttribute="leading" secondItem="Yud-cm-bYW" secondAttribute="leading" constant="20" id="exd-aO-RnY"/>
+                            <constraint firstItem="L5x-yb-qj0" firstAttribute="top" secondItem="TZg-S5-ynh" secondAttribute="bottom" constant="10" id="mvQ-bq-8uO"/>
+                            <constraint firstItem="Yud-cm-bYW" firstAttribute="trailing" secondItem="TZg-S5-ynh" secondAttribute="trailing" id="wNF-gE-gVn"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Yud-cm-bYW"/>
                     </view>
+                    <connections>
+                        <outlet property="searchTextField" destination="lib-wf-Mmo" id="rVd-XZ-b6s"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ko3-zI-hDw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-71.200000000000003" y="-237.03148425787109"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="filtersDefault" width="25" height="24"/>
+        <image name="shutterstock" width="300" height="150"/>
+    </resources>
 </document>
