--- a/GetGoingClass/Base.lproj/Main.storyboard
+++ b/GetGoingClass/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qBz-CT-2py">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5Hc-M8-KqV">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -97,7 +97,34 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ko3-zI-hDw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="868" y="-237.03148425787109"/>
+            <point key="canvasLocation" x="1807.2" y="-237.03148425787109"/>
+        </scene>
+        <!--Camera-->
+        <scene sceneID="m3b-sj-arF">
+            <objects>
+                <navigationController id="bRX-hA-tLJ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Camera" id="xlo-aT-KyW"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7HM-CN-tVX">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="9li-un-peI" kind="relationship" relationship="rootViewController" id="MAy-E9-SZB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bev-em-M7o" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-71" y="678"/>
+        </scene>
+        <!--Camera-->
+        <scene sceneID="9FJ-Zf-OUT">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Camera" id="9li-un-peI" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="0Qf-5T-vG5"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jaa-E7-eMi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="601" y="724"/>
         </scene>
         <!--Filters-->
         <scene sceneID="4IY-PQ-ZKA">
@@ -135,12 +162,15 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h0b-aI-nPP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1784.8" y="-237.03148425787109"/>
+            <point key="canvasLocation" x="2724" y="-237.03148425787109"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="snO-jg-ueD">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qBz-CT-2py" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="search" id="b0x-8A-KEK">
+                        <color key="badgeColor" red="0.0" green="0.54268449539999997" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="0cx-7j-s4F">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -152,6 +182,25 @@
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oVn-X1-ak8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="868" y="-237.03148425787109"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="ozh-uL-cfB">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="5Hc-M8-KqV" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ECN-2v-6Ux">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="qBz-CT-2py" kind="relationship" relationship="viewControllers" id="Gyh-Rs-fgN"/>
+                        <segue destination="bRX-hA-tLJ" kind="relationship" relationship="viewControllers" id="NLE-Yl-mPd"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q5Y-ko-lr2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-71.200000000000003" y="-237.03148425787109"/>
         </scene>
