--- a/GetGoingClass/Base.lproj/Main.storyboard
+++ b/GetGoingClass/Base.lproj/Main.storyboard
@@ -164,6 +164,49 @@
             </objects>
             <point key="canvasLocation" x="2724" y="-237.03148425787109"/>
         </scene>
+        <!--Details View Controller-->
+        <scene sceneID="KC6-Qh-89B">
+            <objects>
+                <viewController storyboardIdentifier="DetailsViewController" id="poV-HS-xu1" customClass="DetailsViewController" customModule="GetGoingClass" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="h7f-4h-hjL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="Pi3-HX-5b5">
+                                <rect key="frame" x="16" y="36" width="343" height="24"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bMb-dL-IQn">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="0.0"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jM4-bg-0FI">
+                                        <rect key="frame" x="0.0" y="24" width="343" height="0.0"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Pi3-HX-5b5" firstAttribute="top" secondItem="SoM-rH-iDj" secondAttribute="top" constant="16" id="D35-ab-jdl"/>
+                            <constraint firstItem="SoM-rH-iDj" firstAttribute="trailing" secondItem="Pi3-HX-5b5" secondAttribute="trailing" constant="16" id="ZNB-kJ-xHL"/>
+                            <constraint firstItem="Pi3-HX-5b5" firstAttribute="leading" secondItem="SoM-rH-iDj" secondAttribute="leading" constant="16" id="ofa-rb-BvW"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="SoM-rH-iDj"/>
+                    </view>
+                    <connections>
+                        <outlet property="phoneNumberLabel" destination="bMb-dL-IQn" id="1Az-Ho-Ytb"/>
+                        <outlet property="websiteLabel" destination="jM4-bg-0FI" id="4mm-nh-3OS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="muI-vf-9Ty" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3506" y="-246"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="snO-jg-ueD">
             <objects>
