--- a/GetGoingClass/ViewControllers/Cells/SearchResultTableViewCell.xib
+++ b/GetGoingClass/ViewControllers/Cells/SearchResultTableViewCell.xib
@@ -34,7 +34,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="wZw-f6-fMa" customClass="RatingControl" customModule="GetGoingClass" customModuleProvider="target">
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="wZw-f6-fMa" customClass="RatingControl" customModule="GetGoingClass" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="63.5" width="224" height="22"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="22" id="Ijj-oX-6BN"/>
