added mapview implementation

--- a/GetGoingClass/Base.lproj/Main.storyboard
+++ b/GetGoingClass/Base.lproj/Main.storyboard
@@ -186,35 +186,47 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="GUT-Ld-lDf">
+                                <rect key="frame" x="0.0" y="60" width="375" height="400"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="400" id="xIA-h6-kU7"/>
+                                </constraints>
+                            </mapView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="Pi3-HX-5b5">
-                                <rect key="frame" x="16" y="36" width="343" height="24"/>
+                                <rect key="frame" x="16" y="460" width="343" height="90"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bMb-dL-IQn">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="0.0"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jM4-bg-0FI">
-                                        <rect key="frame" x="0.0" y="24" width="343" height="0.0"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="text" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="dFS-ui-fgi">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="33"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        <dataDetectorType key="dataDetectorTypes" phoneNumber="YES"/>
+                                    </textView>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="text" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Zzq-ug-PmJ">
+                                        <rect key="frame" x="0.0" y="57" width="343" height="33"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        <dataDetectorType key="dataDetectorTypes" link="YES"/>
+                                    </textView>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Pi3-HX-5b5" firstAttribute="top" secondItem="SoM-rH-iDj" secondAttribute="top" constant="16" id="D35-ab-jdl"/>
+                            <constraint firstItem="GUT-Ld-lDf" firstAttribute="leading" secondItem="SoM-rH-iDj" secondAttribute="leading" id="Iqr-ek-pm1"/>
                             <constraint firstItem="SoM-rH-iDj" firstAttribute="trailing" secondItem="Pi3-HX-5b5" secondAttribute="trailing" constant="16" id="ZNB-kJ-xHL"/>
+                            <constraint firstItem="GUT-Ld-lDf" firstAttribute="bottom" secondItem="Pi3-HX-5b5" secondAttribute="top" id="ggg-6f-T98"/>
+                            <constraint firstItem="GUT-Ld-lDf" firstAttribute="top" secondItem="SoM-rH-iDj" secondAttribute="top" constant="40" id="l8e-dJ-ox4"/>
                             <constraint firstItem="Pi3-HX-5b5" firstAttribute="leading" secondItem="SoM-rH-iDj" secondAttribute="leading" constant="16" id="ofa-rb-BvW"/>
+                            <constraint firstItem="SoM-rH-iDj" firstAttribute="trailing" secondItem="GUT-Ld-lDf" secondAttribute="trailing" id="q4L-mx-fym"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="SoM-rH-iDj"/>
                     </view>
                     <connections>
-                        <outlet property="phoneNumberLabel" destination="bMb-dL-IQn" id="1Az-Ho-Ytb"/>
-                        <outlet property="websiteLabel" destination="jM4-bg-0FI" id="4mm-nh-3OS"/>
+                        <outlet property="mapView" destination="GUT-Ld-lDf" id="fiA-tK-Nca"/>
+                        <outlet property="phoneNumberTextView" destination="dFS-ui-fgi" id="I5e-bt-hNU"/>
+                        <outlet property="websiteTextView" destination="Zzq-ug-PmJ" id="bpL-NU-Ys2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="muI-vf-9Ty" userLabel="First Responder" sceneMemberID="firstResponder"/>
